--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
   <h1>Criação de um repositório GitHub</h1>
+  <img src="imagens/31c91cc9b1af4fe9475d3723bf36f05a.jpg">
 </body>
 </html>
